# kafka-protocol-rs

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yaml  docker-compose.yaml
codegen/: Cargo.toml
codegen/src/: error.rs  main.rs  render.rs  schema.rs
kafka-api/: Cargo.toml
kafka-api/src/: api.rs  apikey.rs  errors.rs  lib.rs  util.rs
kafka-protocol/: Cargo.toml
kafka-protocol-derive/: Cargo.toml
kafka-protocol-derive/src/: lib.rs
kafka-protocol-derive/tests/: defaults.rs  structs.rs  tests.rs  version.rs
kafka-protocol/benches/: bench.rs  primitives.rs
kafka-protocol/proptest-regressions/: primitives.txt
kafka-protocol/src/: lib.rs  primitives.rs
kafka-protocol/tests/: structs.rs  versioned.rs
kafka-protocol/tests/utils/: mod.rs
kafka-transport/: Cargo.toml
kafka-transport/src/: error.rs  frame.rs  lib.rs
kafka-transport/src/media/: mod.rs
kafka-transport/src/media/mem/: hub.rs  mod.rs  transport.rs
