[package]
name = "kafka-api"
version = "0.1.0"
authors = ["Gardner Vickers <gardner@vickers.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka-protocol = {path = "../kafka-protocol"}
kafka-protocol-derive = {path = "../kafka-protocol-derive"}
from_variants = "0.4.0"
