[package]
name = "kafka-api"
version = "0.0.1"
authors = ["Gardner Vickers <gardner@vickers.me>"]
edition = "2018"
repository = "https://github.com/gardnervickers/kafka-protocol-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka-protocol = {version = "=0.0.1", path = "../kafka-protocol"}
kafka-protocol-derive = {version = "=0.0.1", path = "../kafka-protocol-derive"}
from_variants = "0.4.0"
