[package]
name = "kafka-protocol"
version = "0.1.0"
authors = ["Gardner Vickers <gardner@vickers.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"

[dev-dependencies]
criterion = "0.2.11"
bytes = "0.4"
kafka-protocol-derive = {path = "../kafka-protocol-derive"}
proptest = "0.9"
proptest-derive = "0.1.2"

[[bench]]
name = "bench"
harness = false
